Use hyphenated names for css classes

--- a/Detourist/index.html
+++ b/Detourist/index.html
@@ -7,7 +7,7 @@
     <title> Detourist Navigation </title>
 </head>
 <body>
-    <nav class="navigationBar">
+    <nav class="navigation-bar">
         <div class="logo">
             <a href="#home"><img src="logo.jpg" alt="logo"></a>
 
@@ -17,7 +17,7 @@
             </div>
         </div>
 
-        <div class="navlinks">
+        <div class="nav-links">
             <ul>
                 <li><a href="#home"> Home </a></li>
                 <li><a href="#announcements"> Announcements </a></li>
@@ -25,7 +25,7 @@
                 <li><a href="#contact"> Contact </a></li>
             </ul>
 
-            <div class="adminLogin">
+            <div class="login">
             <button> Login </button>
         </div>
         </div>
@@ -33,33 +33,33 @@
     
     <main>
         <header class="home" id="home">
-            <div class="destinationDetails"> 
+            <div class="destination-details"> 
                 <input type="text">
 
-                <div class="roomInfo">
+                <div class="room-info">
                     <h2> Room Name </h2>
-                    <img src="roomimg.jpg">
+                    <img src="room-img.jpg">
                 </div>
 
-                <div class="routeButton">
+                <div class="route-button">
                     <button> Route </button>
                     <button> Emergency Route </button>
                 </div>
 
-                <div class="currentLocationDetails">
+                <div class="current-location-details">
                     <h1> Your Current Location </h1>
                     <h2> Lobby, 6th Floor </h2>
                 </div>
             </div>
 
-            <div class="campusMap">
+            <div class="campus-map">
                 <map name=""></map>
                 <button> + </button>
                 <button> - </button>
             </div>
         </header>
 
-        <section class="schoolLayout">
+        <section class="school-layout">
             <img src="layout.jpg">
         </section>
 
@@ -92,7 +92,7 @@
         </section>
 
         <section class="about" id="about">
-            <div class="aboutContainer">
+            <div class="about-container">
                 <div>
                     <img src="detourist.jpg" alt="detourist">
                 </div>
@@ -104,7 +104,7 @@
         </section>
 
         <footer class="contact" id="contact">
-            <div class="logoFooter">
+            <div class="logo-footer">
                 <img src="logo.jpg" alt="logo">
                 <div class="title">
                     <h1> Detourist </h1>
@@ -112,32 +112,32 @@
                 </div>
             </div>
 
-            <div class="contactPlatforms">
-                <div class="contactInfo">
+            <div class="contact-platforms">
+                <div class="contact-info">
                     <img src="fb.jpg" alt="fb">
                     <h2> Facebook </h2>
                     <p> link </p>
                 </div>
 
-                <div class="contactInfo">
+                <div class="contact-info">
                     <img src="fb.jpg" alt="fb">
                     <h2> Facebook </h2>
                     <p> link </p>
                 </div>
 
-                <div class="contactInfo">
+                <div class="contact-info">
                     <img src="fb.jpg" alt="fb">
                     <h2> Facebook </h2>
                     <p> link </p>
                 </div>
 
-                <div class="contactInfo">
+                <div class="contact-info">
                     <img src="fb.jpg" alt="fb">
                     <h2> Facebook </h2>
                     <p> link </p>
                 </div>
 
-                <div class="contactInfo">
+                <div class="contact-info">
                     <img src="fb.jpg" alt="fb">
                     <h2> Facebook </h2>
                     <p> link </p>
