Use hyphenated css class names and add layout image

--- a/Detourist/index.html
+++ b/Detourist/index.html
@@ -60,7 +60,7 @@
         </header>
 
         <section class="school-layout">
-            <img src="layout.jpg">
+            <img src="images/floor5.png" width="1000px">
         </section>
 
         <section class="announcements" id="announcements">
