Add basic formatting to nav bar

--- a/Detourist/index.html
+++ b/Detourist/index.html
@@ -3,18 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title> Detourist Navigation </title>
 </head>
 <body>
     <nav class="navigation-bar">
         <div class="logo">
-            <a href="#home"><img src="logo.jpg" alt="logo"></a>
-
-            <div class="title">
-                <h1>Detourist</h1>
-                <p>Campus Navigation</p>
-            </div>
+            <a href="#home"><img src="images/logo.jpg" alt="logo"></a>
         </div>
 
         <div class="nav-links">
@@ -60,7 +55,7 @@
         </header>
 
         <section class="school-layout">
-            <img src="images/floor5.png" width="1000px">
+            <img src="images/floor5.png">
         </section>
 
         <section class="announcements" id="announcements">
