Add basic formatting to home section

--- a/Detourist/index.html
+++ b/Detourist/index.html
@@ -27,7 +27,7 @@
     </nav>
     
     <main>
-        <header class="home" id="home">
+        <header id="home">
             <div class="destination-details"> 
                 <input type="text">
 
@@ -42,21 +42,20 @@
                 </div>
 
                 <div class="current-location-details">
-                    <h1> Your Current Location </h1>
-                    <h2> Lobby, 6th Floor </h2>
+                    <h2> Your Current Location </h1>
+                    <h2> 5th Floor </h2>
                 </div>
             </div>
 
             <div class="campus-map">
-                <map name=""></map>
-                <button> + </button>
-                <button> - </button>
+                <img src="images/floor5.png">
+                <div class="zoom-buttons">
+                    <button> + </button>
+                    <button> - </button>
+                </div>
             </div>
         </header>
 
-        <section class="school-layout">
-            <img src="images/floor5.png">
-        </section>
 
         <section class="announcements" id="announcements">
             <h2> Announcements </h2>
