Add styling to nav bar

--- a/Detourist/index.html
+++ b/Detourist/index.html
@@ -21,7 +21,7 @@
             </ul>
 
             <div class="login">
-            <button> Login </button>
+            <button class="login-button"> Login </button>
         </div>
         </div>
     </nav>
