--- a/Detourist/index.html
+++ b/Detourist/index.html
@@ -25,7 +25,7 @@
 
   <body>
     <!-- ===== NAVIGATION BAR ===== -->
-    <header class="navbar" id="navbar">
+    <nav class="navbar" id="navbar">
       <div class="navbar-left">
         <a href="#home">
           <img src="logo.jpg" alt="Detourist logo" class="navbar-logo" />
@@ -55,7 +55,7 @@
           <span></span>
         </div>
       </div>
-    </header>
+    </nav>
 
     <!-- ===== MAIN CONTENT ===== -->
     <main id="main-content">
