fixed the error

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       <section class="about-section" id="about">
         <div class="about-container">
           <figure class="about-image">
-            <img src="detourist.jpg" alt="Detourist application preview" />
+            <img src="assets/images/logo.jpg" alt="Detourist application preview" />
           </figure>
           <div class="about-info">
             <h2>About</h2>
