Added login.html, added logo in login

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </nav>
 
       <div class="navbar-right">
-        <button class="btn-login">Login</button>
+        <a href="login.html" class="btn-login">Login</a>
 
         <!-- Hamburger -->
         <div class="hamburger" id="hamburger" aria-label="Toggle menu" aria-expanded="false">
