--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <nav class="navbar" id="navbar">
       <div class="navbar-left">
         <a href="#home">
-          <img src="assets/images/logo.jpg" alt="Detourist logo" class="navbar-logo" />
+          <img src="assets/images/logoD.png" alt="Detourist logo" class="navbar-logo" />
         </a>
         <div class="navbar-title">
           <h1>Detourist</h1>
