Make home section more colorful

--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
 
         <div class="route-button">
           <button id="norm-route">Route</button>
-          <button id="er-route"><img src="assets/images/warning.webp" alt=""> Emergency Route</button>
+          <button id="er-route">⚠︎ Emergency Route</button>
         </div>
 
         <div class="current-location-details">
           <img src="assets/images/location.png" alt="location">
           <div id="details">
-            <h3 id="loc-header">Your Current Location</h3>
-            <h3 id="loc-info">Lobby, 6th Floor</h3>
+            <p id="loc-header">Your Current Location</p>
+            <p id="loc-info">Lobby, 6th Floor</p>
           </div>
         </div>
       </div>
