Change text of location to 5th floor

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <img src="assets/images/location.png" alt="location">
           <div id="details">
             <p id="loc-header">Your Current Location</p>
-            <p id="loc-info">Lobby, 6th Floor</p>
+            <p id="loc-info">5th Floor</p>
           </div>
         </div>
       </div>
