Make home section style more consistent

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="current-location-details">
           <img src="assets/images/location.png" alt="location">
           <div id="details">
-            <p id="loc-header">Your Current Location</p>
+            <p id="loc-header">Your Current Location:</p>
             <p id="loc-info">5th Floor</p>
           </div>
         </div>
@@ -79,7 +79,7 @@
         <img src="assets/images/floor5.png" alt="Campus map" />
         <div class="zoom-buttons">
           <button>+</button>
-          <button>-</button>
+          <button>–</button>
         </div>
       </div>
     </section>
