--- a/login.html
+++ b/login.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Detourist | Campus Navigation</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -17,6 +18,7 @@
             </div>
         </div>
         <div class="login-box fade-in">
+            <img class="login-mobile-logo" src="assets/images/logo-transparent.png">
             <h1>Welcome Back!</h1>
             <form class="login-form">
                 <div class="login-field">
