--- a/index.html
+++ b/index.html
@@ -215,6 +215,8 @@
 
   <!-- ===== SCRIPTS ===== -->
   <script src="js/script.js" defer></script>
+  <script src="js/coordinates.js"></script>
+  <script src="js/map.js"></script>
 </body>
 
 </html>
