--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <li><a href="#announcements">Announcements</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#contact">Contact</a></li>
+        <li><a href="login.html">Login</a></li>
       </ul>
     </div>
 
