--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
         <li><a href="#announcements">Announcements</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#contact">Contact</a></li>
-        <li><a href="login.html">Login</a></li>
       </ul>
     </div>
 
@@ -77,12 +76,15 @@
         </div>
       </div>
 
-      <div class="campus-map">
-        <img src="assets/images/floor5.png" alt="Campus map" />
-        <div class="zoom-buttons">
-          <button>+</button>
-          <button>–</button>
+      <div class="map-wrapper">
+        <div class="campus-map">
+          <img src="assets/images/floor5.png" alt="Campus map" class="map-img" />
         </div>
+
+        <div class="zoom-buttons">
+            <button>+</button>
+            <button>-</button>
+          </div>
       </div>
     </section>
   </header>
