--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
       </div>
 
       <div class="map-wrapper">
-        <div class="campus-map">
-          <img src="assets/images/floor5.png" alt="Campus map" class="map-img" />
+        <div class="campus-map" id="campusMap">
+          <img src="assets/images/floor5.png" alt="Campus map" class="map-img" draggable="false" />
         </div>
 
         <div class="zoom-buttons">
-            <button>+</button>
-            <button>-</button>
+            <button id="zoomIn">+</button>
+            <button id="zoomOut">-</button>
           </div>
       </div>
     </section>
@@ -220,6 +220,7 @@
   <script src="js/script.js" defer></script>
   <script src="js/coordinates.js"></script>
   <script src="js/map.js"></script>
+  <script src="js/zoomButtons.js"></script>
 </body>
 
 </html>
