get announcements from database

--- a/index.html
+++ b/index.html
@@ -97,29 +97,31 @@
     <section class="announcements-section" id="announcements">
       <h2>Announcements</h2>
 
-      <article class="announcement-card" data-title="Campus Maintenance Notice"
-        data-body="Power will be temporarily interrupted on October 26, from 8AM to 10AM for scheduled maintenance. Please save your work before this time.">
-        <h3>Campus Maintenance Notice</h3>
-        <p>Power will be temporarily interrupted...</p>
-      </article>
+      <div class="announcement-list" id="announcementList">
+        <article class="announcement-card" data-title="Campus Maintenance Notice"
+          data-body="Power will be temporarily interrupted on October 26, from 8AM to 10AM for scheduled maintenance. Please save your work before this time.">
+          <h3>Campus Maintenance Notice</h3>
+          <p>Power will be temporarily interrupted...</p>
+        </article>
 
-      <article class="announcement-card" data-title="Safety Drill"
-        data-body="There will be a campus-wide safety drill on October 30. Please follow evacuation signs and cooperate with campus personnel.">
-        <h3>Safety Drill</h3>
-        <p>There will be a campus-wide safety drill...</p>
-      </article>
+        <article class="announcement-card" data-title="Safety Drill"
+          data-body="There will be a campus-wide safety drill on October 30. Please follow evacuation signs and cooperate with campus personnel.">
+          <h3>Safety Drill</h3>
+          <p>There will be a campus-wide safety drill...</p>
+        </article>
 
-      <article class="announcement-card" data-title="New Cafeteria Menu"
-        data-body="The cafeteria introduces new healthy meal options starting next week! Visit the canteen to check out the full menu.">
-        <h3>New Cafeteria Menu</h3>
-        <p>The cafeteria introduces new healthy meal options...</p>
-      </article>
+        <article class="announcement-card" data-title="New Cafeteria Menu"
+          data-body="The cafeteria introduces new healthy meal options starting next week! Visit the canteen to check out the full menu.">
+          <h3>New Cafeteria Menu</h3>
+          <p>The cafeteria introduces new healthy meal options...</p>
+        </article>
 
-      <article class="announcement-card" data-title="Library Schedule Update"
-        data-body="The library will now open from 7AM to 9PM daily. This adjustment aims to accommodate more students.">
-        <h3>Library Schedule Update</h3>
-        <p>The library will now open from 7AM to 9PM...</p>
-      </article>
+        <article class="announcement-card" data-title="Library Schedule Update"
+          data-body="The library will now open from 7AM to 9PM daily. This adjustment aims to accommodate more students.">
+          <h3>Library Schedule Update</h3>
+          <p>The library will now open from 7AM to 9PM...</p>
+        </article>
+      </div>
     </section>
 
     <!-- ===== MODAL ===== -->
@@ -225,6 +227,7 @@
   <script src="js/map.js"></script>
   <script src="js/zoomButtons.js"></script>
   <script src="js/search.js"></script>
+  <script src="js/announcements.js"></script>
 </body>
 
 </html>
