change default style

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
 
         <div class="room-info">
-          <h2>Room Name</h2>
+          <h2>Maryheights Bakakeng</h2>
           <img src="assets/images/room.jpg" alt="Room preview" />
         </div>
 
