--- a/login.html
+++ b/login.html
@@ -21,20 +21,20 @@
         <div class="login-box fade-in">
             <img class="login-mobile-logo" src="assets/images/logo-transparent.png">
             <h1>Welcome Back!</h1>
-            <form class="login-form">
-                <div class="login-field">
-                    <label for="username">Username:</label>
-                    <input type="text" id="username" name="username">
-                </div>
-                <div class="login-field">
-                    <label for="password">Password:</label>
-                    <input type="password" id="password" name="password">
-                </div>
-                <div class="login-actions">
-                    <button type="submit" class="login-btn">Login</button>
-                </div>
-                <a class="forgot" href="#">Forgot Password?</button>
-            </form>
+            <form class="login-form" method="POST" action="database/adminLogin.php">
+            <div class="login-field">
+                <label for="username">Username:</label>
+                <input type="text" id="username" name="username" required>
+            </div>
+            <div class="login-field">
+                <label for="password">Password:</label>
+                <input type="password" id="password" name="password" required>
+            </div>
+            <div class="login-actions">
+                <button type="submit" class="login-btn">Login</button>
+            </div>
+            <a class="forgot" href="#">Forgot Password?</a>
+        </form>
         </div>
     </main>
 </body>
