--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
 
         <div class="room-info">
           <h2>Maryheights Bakakeng</h2>
-          <img src="assets/images/room.jpg" alt="Room preview" />
+          <img src="assets\images\maryheights-campus.jpg" alt="Room preview" />
         </div>
 
-        <div class="route-button">
+        <div cssslass="route-button">
           <button id="norm-route">Route</button>
           <button id="er-route">⚠︎ Emergency Route</button>
         </div>
@@ -73,7 +73,7 @@
         <div class="current-location-details">
           <img src="assets/images/location.png" alt="location">
           <div id="details">
-            <p id="loc-header">Your Current Location:</p>
+            <p id="loc-header">Current Location:</p>
             <p id="loc-info">5th Floor</p>
           </div>
         </div>
