--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <img src="assets\images\maryheights-campus.jpg" alt="Room preview" />
         </div>
 
-        <div cssslass="route-button">
+        <div class="route-button">
           <button id="norm-route">Route</button>
           <button id="er-route">⚠︎ Emergency Route</button>
         </div>
@@ -73,7 +73,7 @@
         <div class="current-location-details">
           <img src="assets/images/location.png" alt="location">
           <div id="details">
-            <p id="loc-header">Current Location:</p>
+            <p id="loc-header">Your Current Location:</p>
             <p id="loc-info">5th Floor</p>
           </div>
         </div>
