--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
   <!-- ===== SCRIPTS ===== -->
   <script src="js/script.js" defer></script>
   <script src="js/coordinates.js"></script>
-  <script src="js/map.js"></script>
+  <script src="js/emergencyRoute.js"></script>
   <script src="js/zoomButtons.js"></script>
   <script src="js/search.js"></script>
   <script src="js/announcements.js"></script>
