--- a/index.html
+++ b/index.html
@@ -165,7 +165,9 @@
     <div class="footer-container">
       <!-- Brand -->
       <div class="footer-brand">
-        <div class="brand-logo"></div>
+        <div class="brand-logo">
+          <img src="assets/images/logo-transparent.png" alt="Logo">
+        </div>
         <div class="brand-text">
           <h2>Detourist</h2>
           <p>Campus Navigation</p>
