--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <section id="home">
       <div class=" destination-details">
         <div class="search-container">
-          <input type="text" id="searchRoom" placeholder="Search destination..." autocomplete="off"/>
+          <input type="text" id="searchRoom" placeholder="Search destination..." autocomplete="off" />
           <div id="searchResults" class="autocomplete-results"></div>
         </div>
 
@@ -82,12 +82,13 @@
       <div class="map-wrapper">
         <div class="campus-map" id="campusMap">
           <img src="assets/images/floor5.png" alt="Campus map" class="map-img" draggable="false" />
+          <canvas width="838px" height="458px" id="map-canvas"></canvas>
         </div>
 
         <div class="zoom-buttons">
-            <button id="zoomIn">+</button>
-            <button id="zoomOut">-</button>
-          </div>
+          <button id="zoomIn">+</button>
+          <button id="zoomOut">-</button>
+        </div>
       </div>
     </section>
   </header>
