--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
   <!-- ===== SCRIPTS ===== -->
   <script src="js/script.js" defer></script>
   <script src="js/coordinates.js"></script>
-  <script src="js/emergencyRoute.js"></script>
+  <!-- <script src="js/emergencyRoute.js"></script> -->
   <script src="js/zoomButtons.js"></script>
   <!-- <script src="js/search.js"></script> -->
   <script src="js/announcements.js"></script>
