Bring related elements in destination details closer together

--- a/index.html
+++ b/index.html
@@ -61,20 +61,22 @@
         </div>
 
         <div class="text-fields">
-            <div class="search-container">
-              <input type="text" class="search" id="source-room" placeholder="Source" />
-              <div id="sourceResults" class="autocomplete-results"></div>
+          <div class="search-container">
+            <input type="text" class="search" id="source-room" placeholder="Source" />
+            <div id="sourceResults" class="autocomplete-results"></div>
           </div>
 
-          <div class="search-container">
+          <div class="routing-form">
+            <div class="search-container">
               <input type="text" class="search" id="destination-room" placeholder="Destination" />
               <div id="destinationResults" class="autocomplete-results"></div>
+            </div>
           </div>
-        </div>
 
-        <div class="route-button">
-          <button id="norm-route">Route</button>
-          <button id="er-route">⚠︎ Emergency Route</button>
+          <div class="route-button">
+            <button id="norm-route">Route</button>
+            <button id="er-route">⚠︎ Emergency Route</button>
+          </div>
         </div>
 
         <div class="current-location-details">
