--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class=" destination-details">
         <div class="room-info">
           <h2>Maryheights Bakakeng</h2>
-          <img src="assets\images\maryheights-campus.jpg" alt="Room preview" />
+          <img src="assets/images/maryheights-campus.jpg" alt="Room preview" />
         </div>
 
         <div class="text-fields">
