--- a/login.html
+++ b/login.html
@@ -12,28 +12,30 @@
 <body class="login-page">
     <main class="login-grid login-overlay">
         <div class="login-left-bg">
-            <img src="assets/images/logoD.png">
+            <img src="assets/images/logoD.png" alt="Detourist logo">
             <div class="login-left-bg-text">
                 <p>Detourist</p>
                 <p>Campus Navigation</p>
             </div>
         </div>
+
         <div class="login-box fade-in">
-            <img class="login-mobile-logo" src="assets/images/logo-transparent.png">
+            <img class="login-mobile-logo" src="assets/images/logo-transparent.png" alt="Detourist logo">
             <h1>Welcome Back!</h1>
-            <form class="login-form" method="POST" action="database/adminLogin.php">
-            <div class="login-field">
-                <label for="username">Username:</label>
-                <input type="text" id="username" name="username" required>
-            </div>
-            <div class="login-field">
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="password" required>
-            </div>
-            <div class="login-actions">
-                <button type="submit" class="login-btn">Login</button>
-            </div>
-        </form>
+
+            <form class="login-form" method="POST" action="database/login.php">
+                <div class="login-field">
+                    <label for="username">Username or Email:</label>
+                    <input type="text" id="username" name="username" required>
+                </div>
+                <div class="login-field">
+                    <label for="password">Password:</label>
+                    <input type="password" id="password" name="password" required>
+                </div>
+                <div class="login-actions">
+                    <button type="submit" class="login-btn">Login</button>
+                </div>
+            </form>
         </div>
     </main>
 </body>
