pop-up room info after clicking map

--- a/client/index.html
+++ b/client/index.html
@@ -241,6 +241,19 @@
   <script src="../js/zoomButtons.js"></script>
   <script src="../js/search.js"></script>
   <script src="../js/announcements.js"></script>
+
+  <!-- ===== ROOM POPUP (placeholder) ===== -->
+  <div id="room-popup" style="display: none;">
+    <button id="popup-close-btn" class="popup-close-btn">&times;</button>
+    <img id="popup-room-image" src="" alt="Room Image" />
+    <h3 id="popup-room-name">Room Name</h3>
+    <p id="popup-room-details">Wing 1, 5th Floor</p>
+    <div class="popup-actions">
+      <button id="popup-set-source">Set as Source</button>
+      <button id="popup-set-dest">Set as Destination</button>
+    </div>
+  </div>
+
 </body>
 
 </html>
