Keep aspect ratio of the room image consistent

--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
       <div class="destination-details">
         <div class="room-info">
           <h2>Maryheights Bakakeng</h2>
-          <img src="assets/images/maryheights-campus.jpg" alt="Room preview" />
+          <div class="room-img-wrapper">
+            <img src="assets/images/maryheights-campus.jpg" alt="Room preview" width="960px" height="595px" />
+          </div>
         </div>
 
         <div class="text-fields">
