Fix dark mode name

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <div class="zoom-buttons">
           <button id="zoomIn">+</button>
           <button id="zoomOut">-</button>
-          <button id="nightMode">☼</button>
+          <button id="darkMode">☼</button>
         </div>
       </div>
     </section>
