--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
 
         <div class="text-fields">
           <div class="search-container">
-            <input type="text" class="search" id="source-room" placeholder="Your Location" />
+            <input type="text" class="search" id="source-room" placeholder="Current Location (Route Source)" />
             <div id="sourceResults" class="autocomplete-results"></div>
           </div>
 
           <div class="routing-form">
             <div class="search-container">
-              <input type="text" class="search" id="destination-room" placeholder="Your Destination" />
+              <input type="text" class="search" id="destination-room" placeholder="Destination" />
               <div id="destinationResults" class="autocomplete-results"></div>
             </div>
           </div>
