--- a/login.html
+++ b/login.html
@@ -34,6 +34,7 @@
                 </div>
                 <div class="login-actions">
                     <button type="submit" class="login-btn">Login</button>
+                    <a href="index.html" class="guest-btn">Guest Mode</a>
                 </div>
             </form>
         </div>
