--- a/login.html
+++ b/login.html
@@ -21,22 +21,27 @@
 
         <div class="login-box fade-in">
             <img class="login-mobile-logo" src="assets/images/logo-transparent.png" alt="Detourist logo">
-            <h1>Welcome Back!</h1>
+                <h1>Welcome Back!</h1>
 
             <form class="login-form" method="POST" action="database/login.php">
                 <div class="login-field">
-                    <label for="username">Username or Email:</label>
-                    <input type="text" id="username" name="username" required>
-                </div>
-                <div class="login-field">
-                    <label for="password">Password:</label>
-                    <input type="password" id="password" name="password" required>
-                </div>
-                <div class="login-actions">
-                    <button type="submit" class="login-btn">Login</button>
-                    <a href="index.html" class="guest-btn">Guest Mode</a>
-                </div>
-            </form>
+            <label for="username">Username or Email:</label>
+            <input type="text" id="username" name="username" required>
+            </div>
+        <div class="login-field">
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" required>
+        </div>
+        <div class="login-actions">
+            <button type="submit" class="login-btn">Login</button>
+        </div>
+    </form>
+
+        <div class="back-to-client">
+            <a href="index.html">← Back to Client</a>
+        </div>
+    </div>
+        </form>
         </div>
     </main>
 </body>
