--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
 
         <div class="login-box fade-in">
             <img class="login-mobile-logo" src="assets/images/logo-transparent.png" alt="Detourist logo">
-                <h1>Welcome Back!</h1>
+                <h1>ADMIN LOGIN</h1>
 
             <form class="login-form" method="POST" action="database/login.php">
                 <div class="login-field">
