--- a/login.html
+++ b/login.html
@@ -1,3 +1,10 @@
+<!--
+    - Page metadata, favicon, and external stylesheet.
+    - A two-panel layout with a branded left background and a login form on the right.
+    - A POST form that submits username/email and password to login.php.
+    - Mobile-friendly logo handling and basic navigation link back to the client page.
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -21,7 +28,7 @@
 
         <div class="login-box fade-in">
             <img class="login-mobile-logo" src="assets/images/logo-transparent.png" alt="Detourist logo">
-                <h1>Welcome Back!</h1>
+                <h1>Welcome!</h1>
 
             <form class="login-form" method="POST" action="database/login.php">
                 <div class="login-field">
