Refactor 'zoom buttons' to 'map buttons'

--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
         <div class="room-info">
           <h2>Maryheights Bakakeng</h2>
           <div class="room-img-wrapper">
-            <img src="admin/public/assets/backgrounds/maryheights-campus.jpg" alt="Room preview" width="960px" height="595px" />
+            <img src="admin/public/assets/backgrounds/maryheights-campus.jpg" alt="Room preview" width="960px"
+              height="595px" />
           </div>
         </div>
 
@@ -99,7 +100,7 @@
           <canvas width="838px" height="458px" id="map-text-canvas"></canvas>
         </div>
 
-        <div class="zoom-buttons">
+        <div class="map-buttons">
           <button id="zoomIn">+</button>
           <button id="zoomOut">-</button>
           <button id="darkMode">☼</button>
@@ -234,7 +235,7 @@
   </footer>
 
   <script src="client/js/script.js" defer></script>
-  <script src="client/js/zoomButtons.js"></script>
+  <script src="client/js/mapButtons.js"></script>
   <script src="client/js/search.js"></script>
   <script src="client/js/announcements.js"></script>
 
