Add buttons for switching between floors

--- a/index.html
+++ b/index.html
@@ -101,9 +101,17 @@
         </div>
 
         <div class="map-buttons">
-          <button id="zoomIn">+</button>
-          <button id="zoomOut">-</button>
-          <button id="darkMode">☼</button>
+          <div class="upper-buttons">
+            <button id="darkMode">☼</button>
+          </div>
+          <div class="middle-buttons">
+            <button id="zoomIn">+</button>
+            <button id="zoomOut">-</button>
+          </div>
+          <div class="lower-buttons">
+            <button id="upFloor">^</button>
+            <button id="downFloor">^</button>
+          </div>
         </div>
       </div>
     </section>
