Update current floor labels via buttons

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <div class="current-location-details">
           <img src="admin/public/assets/icons/location.png" alt="location">
           <div id="details">
-            <p id="loc-header">Current Location: <span id="loc-info">5th Floor</span></p>
+            <p id="loc-header">Current Floor: <span id="loc-info"><span id="floor-number">5</span>th Floor</span></p>
           </div>
         </div>
       </div>
