Move modal and mobile nav logics out of script.js

--- a/index.html
+++ b/index.html
@@ -243,9 +243,10 @@
   </footer>
 
   <script src="client/js/script.js" defer></script>
-  <script src="client/js/mapButtons.js"></script>
-  <script src="client/js/search.js"></script>
-  <script src="client/js/announcements.js"></script>
+  <script src="client/js/announcements.js" defer></script>
+  <script src="client/js/mobileNavigation.js" defer></script>
+  <script src="client/js/mapButtons.js" defer></script>
+  <script src="client/js/search.js" defer></script>
 
   <div id="map-popup" class="map-popup" style="display: none;">
     <button id="popup-close" class="popup-close">&times;</button>
